config-root/namespaces/jx/jx-pipelines-visualizer/jx-pipelines-visualizer-deploy.yaml
# Source: jx-pipelines-visualizer/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jx-pipelines-visualizer
  labels:
    app.kubernetes.io/name: jx-pipelines-visualizer
    app.kubernetes.io/instance: "jx-pipelines-visualizer"
    helm.sh/chart: jx-pipelines-visualizer-1.2.0
    app.kubernetes.io/version: "latest"
    app.kubernetes.io/managed-by: "Helm"
    gitops.jenkins-x.io/pipeline: 'namespaces'
  namespace: jx
  annotations:
    wave.pusher.com/update-on-config-change: 'true'
spec:
  replicas: 1
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: jx-pipelines-visualizer
      app.kubernetes.io/instance: "jx-pipelines-visualizer"
  template:
    metadata:
      labels:
        app.kubernetes.io/name: jx-pipelines-visualizer
        app.kubernetes.io/instance: "jx-pipelines-visualizer"
        helm.sh/chart: jx-pipelines-visualizer-1.2.0
        app.kubernetes.io/version: "latest"
        app.kubernetes.io/managed-by: "Helm"
    spec:
      containers:
        - name: jx-pipelines-visualizer
          image: "gcr.io/jenkinsxio/jx-pipelines-visualizer:1.2.0"
          args:
            - -namespace
            - jx
            - -resync-interval
            - 60s
            - -log-level
            - INFO
          ports:
            - name: http
              containerPort: 8080
          livenessProbe:
            tcpSocket:
              port: http
          readinessProbe:
            httpGet:
              path: /healthz
              port: http
          volumeMounts:
            - mountPath: /secrets/git
              name: secrets-git
          resources:
            limits:
              cpu: "1"
              memory: 512M
            requests:
              cpu: "0.2"
              memory: 128M
      securityContext:
        fsGroup: 1000
      serviceAccountName: jx-pipelines-visualizer
      enableServiceLinks: false
      volumes:
        - name: secrets-git
          secret:
            defaultMode: 420
            secretName: tekton-git
